--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Rambler-Club-s-ball-nine_69654
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 69654-h/images/cover.jpg
 creator:
   author:
     agent_name: Sheppard, W. Crispin (William Crispin)
@@ -8,6 +11,8 @@ creator:
     gutenberg_agent_id: '42146'
     url: http://www.gutenberg.org/2009/agents/42146
 description: Illustrated by the author.
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/69654#The-Rambler-Club-s-ball-nine
 gutenberg_issued: '2022-12-28'
 identifiers:
   gutenberg: '69654'
